--- a/src/App.css
+++ b/src/App.css
@@ -50,12 +50,12 @@ td {
 
 }
 
-.form form {
+.form {
 
   padding: 10px
 }
 
-.form form select,
+.form select,
 input,
 label {
 
@@ -105,11 +105,35 @@ select:hover {
   width: 570px;
   max-height: 300px;
   overflow-y: auto;
+  background-color: #F4F5F9;
 
 }
 
 .form .minus {
 
   cursor: pointer;
+
+}
+
+#submit {
+
+  border-radius: 0.375rem;
+  background: white;
+  font-weight: 600;
+  width: 5rem;
+  height: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #CFD2DC;
+  padding:3px;
+  margin-top: 20px;
+  
+}
+
+#submit:hover {
+
+  cursor: pointer;
+  border: 2px solid lightblue;
 
 }
